# ProtoVoxel

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  imgui.ini  main.cpp
glad/: glad.c  glad.h
glad/include/glad/: glad.h
glad/src/: glad.c
imgui/: imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
shaders/hiz/: convert.glsl  convert_reproj.glsl  downsample.glsl  downsample_last.glsl
shaders/pbr/: vertex.glsl
shaders/pointcloud/: splat.glsl
shaders/splatting/: bucket.glsl  fragment.glsl  occluded_bucket.glsl  points.glsl  resolve_frag.glsl  resolve_vtx.glsl  vertex.glsl
src/core/: freecamera.cpp  freecamera.h  frustumcull.h  input.cpp  input.h  scripting.cpp  scripting.h  semaphore.h  window.cpp  window.h
src/graphics/: computepipeline.cpp  computepipeline.h  framebuffer.cpp  framebuffer.h  gpubuffer.cpp  gpubuffer.h  graphicsdevice.cpp  graphicsdevice.h  graphicspipeline.cpp  graphicspipeline.h  hiz.cpp  hiz.h  shaderprogram.cpp  shaderprogram.h  shadersource.cpp  shadersource.h  shadowed_gpubuffer.cpp  shadowed_gpubuffer.h  texture.cpp  texture.h
src/misc/: intersections.h  model.cpp  model.h
src/pointcloud/: chunk.cpp  chunk.h  chunkjobmanager.cpp  chunkjobmanager.h  chunkmanager.cpp  chunkmanager.h  chunkrenderer.cu  chunkupdater.cpp  chunkupdater.h  draw_cmdlist.cpp  draw_cmdlist.h  mesh_malloc.cpp  mesh_malloc.h
src/scenegraph/: scenebase.cpp  scenebase.h
src/voxel/: PerlinNoise.h  chunk.cpp  chunk.h  chunk_malloc.cpp  chunk_malloc.h  chunkjobmanager.cpp  chunkjobmanager.h  chunkmanager.cpp  chunkmanager.h  chunkpalette.cpp  chunkpalette.h  chunkupdater.cpp  chunkupdater.h  draw_cmdlist.cpp  draw_cmdlist.h  mesh_malloc.cpp  mesh_malloc.h  mortoncode.cpp  mortoncode.h  rle.cpp  rle.h
test builds/: imgui.ini
